--- a/lib/views/principal.erb
+++ b/lib/views/principal.erb
@@ -1,4 +1,5 @@
-<!DOCTYPE html>  
+<form method="post" action="/registro">
+
 <html lang="en">  
   <body>  
     <h1>Cucumber - Sinatra - PC2</h1>
@@ -8,8 +9,10 @@
 	<label for="principal">Comentario </label> <input name="pComentario" /> <br />
 	<br />
 	<br />	
-	 <li><a  href="/registro"> Registro   </a></li>	
+			<input type = "submit" value = "Registro"> 		
+
 </form>
 
   </body>  
 </html>
+
